erDiagram
    USER {
        uuid id PK
        string email
        string name
        string role "admin | sales_rep | manager"
        string phone
        timestamp created_at
    }

    CONTACT {
        uuid id PK
        string first_name
        string last_name
        string email
        string phone
        string address_line1
        string address_line2
        string city
        string state
        string zip
        string property_type "house | apartment | condo | business"
        string lead_source "google_ads | referral | door_to_door | website | other"
        string lead_source_detail "campaign name or referrer info"
        uuid referred_by_contact_id FK
        uuid assigned_to FK "USER.id"
        timestamp created_at
        timestamp updated_at
    }

    DEAL {
        uuid id PK
        uuid contact_id FK
        uuid assigned_to FK "USER.id"
        string stage "new_lead | contacted | consultation_scheduled | consultation_complete | quote_sent | negotiation | install_scheduled | installed | contract_signed | lost"
        string deal_name
        decimal estimated_value "total contract value"
        string loss_reason "nullable"
        date expected_close_date
        timestamp stage_changed_at
        timestamp created_at
        timestamp updated_at
    }

    STAGE_HISTORY {
        uuid id PK
        uuid deal_id FK
        string from_stage
        string to_stage
        uuid changed_by FK "USER.id"
        timestamp changed_at
    }

    ACTIVITY {
        uuid id PK
        uuid deal_id FK "nullable"
        uuid contact_id FK
        uuid user_id FK
        string type "call | email | note | appointment | site_visit | door_knock"
        string subject
        text description
        timestamp scheduled_at "nullable"
        timestamp completed_at "nullable"
        timestamp created_at
    }

    QUOTE {
        uuid id PK
        uuid deal_id FK
        uuid contact_id FK
        uuid created_by FK "USER.id"
        string status "draft | sent | accepted | rejected | expired"
        decimal equipment_total
        decimal install_fee
        decimal monthly_monitoring
        int contract_term_months "36 | 48 | 60"
        decimal total_contract_value "monthly * term"
        text equipment_details "JSON - cameras, sensors, panel, etc"
        date valid_until
        timestamp sent_at
        timestamp created_at
    }

    CONTRACT {
        uuid id PK
        uuid deal_id FK
        uuid contact_id FK
        uuid quote_id FK
        string status "active | cancelled | expired | pending"
        date start_date
        date end_date
        int term_months
        decimal monthly_amount
        decimal total_value
        string cancellation_reason "nullable"
        date cancelled_at "nullable"
        string payment_processor_customer_id "Stripe customer ID"
        string payment_processor_subscription_id "Stripe subscription ID"
        timestamp created_at
        timestamp updated_at
    }

    PAYMENT {
        uuid id PK
        uuid contract_id FK
        uuid contact_id FK
        string status "succeeded | failed | pending | refunded"
        decimal amount
        string payment_processor_payment_id "Stripe payment intent ID"
        string payment_method "card | ach | check"
        date payment_date
        date period_start
        date period_end
        string failure_reason "nullable"
        timestamp created_at
    }

    REFERRAL {
        uuid id PK
        uuid referrer_contact_id FK "existing customer who referred"
        uuid referred_contact_id FK "new contact created"
        uuid deal_id FK "nullable - deal created from referral"
        string status "pending | converted | expired"
        decimal referral_credit "amount credited to referrer"
        boolean credit_paid
        timestamp created_at
    }

    GOOGLE_LEAD {
        uuid id PK
        uuid contact_id FK "nullable - linked after processing"
        uuid deal_id FK "nullable - deal created from lead"
        string google_campaign_id
        string google_campaign_name
        string google_form_id
        string raw_name
        string raw_email
        string raw_phone
        text raw_payload "full JSON from Google"
        string processing_status "new | matched | contact_created | deal_created | error"
        timestamp received_at
        timestamp processed_at
    }

    CONTACT ||--o{ DEAL : "has"
    CONTACT ||--o{ ACTIVITY : "has"
    CONTACT ||--o{ QUOTE : "receives"
    CONTACT ||--o{ CONTRACT : "signs"
    CONTACT ||--o{ PAYMENT : "makes"
    DEAL ||--o{ STAGE_HISTORY : "tracks"
    DEAL ||--o{ ACTIVITY : "has"
    DEAL ||--o{ QUOTE : "includes"
    DEAL ||--|o CONTRACT : "converts to"
    CONTRACT ||--o{ PAYMENT : "generates"
    CONTACT ||--o{ REFERRAL : "makes as referrer"
    CONTACT ||--o{ REFERRAL : "created as referred"
    GOOGLE_LEAD ||--o| CONTACT : "creates"
    GOOGLE_LEAD ||--o| DEAL : "creates"
    USER ||--o{ DEAL : "owns"
    USER ||--o{ ACTIVITY : "performs"
    USER ||--o{ CONTACT : "manages"
